2003-06-22  Dodji Seketeli  <dodji at seketeli dot org>

	* src/parser/cr-statement.c: added
	parse_font_face_unrecoverable_error_cb(), 
	parse_page_unrecoverable_error_cb() ... to handle
	parsing error in the cr_statement_xxx_parse() method.
	These callback method are not called yet.
	
	* src/parser/cr-tknzr.c: made the cr_tknzr_parse_important() look
	somewhat better.
	
	* src/parser/cr-parser.c: fixed some bugs in the parser.
	It does now parse the w3c forward compatible parsing test sheet
	at http://www.w3.org/Style/CSS/Test/CSS1/current/sec71.htm .

	* docs/design/parser-architecture.txt: updated this doc.
	A lot more is still needed.

	* csslint/csslint.c: fixed some small bugs in csslint. Now, --cssom is
	set by default.

2003-06-21  dodji  <dodji@seketeli.org>

	* src/parser/cr-statement.[ch]:
	Changed the prototype of cr_statement_unlink() to
	harmonize it with cr_declaration_unlink().

2003-06-20  Dodji Seketeli  <dodji@seketeli.org>

	* src/parser/cr-term.[ch]:
	added the  cr_term_parse_expression_from_buf() function.
	this is new and still needs to be tested.
	
	* src/parser/cr-parser.[hc]:
	made cr_parser_parse_expr() public.
	
	* src/parser/cr-declaration.[ch]:
	changed cr_declaration_parse() into 
	cr_declaration_parse_parse_from_buf().
	
	* src/parser/cr-statement.[ch]:
	fixed some typos.
	added the function cr_statement_does_buf_parses_against_core() and
	cr_statement_ruleset_get_declarations().
	
	* src/parser/cr-parser.[ch]:
	made cr_parser_parse_statement_core() public.
	
	* src/parser/cr-om-parser.c:
	fixed a small typo.
	
	* src/parser/cr-declaration.[ch]
	added a new cr_declaration_unlink() function.

2003-06-19  Dodji Seketeli  <dodji@seketeli.org>

	* tests/test4-main.[ch]: updated this to test
	cr_statement_parse_from_buf(). It seems to work now.
	Still some memleaks to fix.

	* src/parser/cr-statement.[ch]:
	some bug fixes in cr_statement_parse_from_buf() + 
	added a new cr_statement_at_import_rule_parse_from_buf() method.
